syntax = "proto3";

option optimize_for = CODE_SIZE;

message ClosestPeersRequest {
  string peerId = 1;
  string nonce = 2;
}

message ClosestPeersResponse {
  repeated string neighborIds = 1;
  string nonce = 2;
}