syntax = "proto3";

option optimize_for = CODE_SIZE;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "packages/dht/protos/PeerDescriptor.proto";

message ExperimentServerMessage {
    oneof instruction {
        Start start = 1;
        JoinExperiment joinExperiment = 2;
    }
}

message ExperimentClientMessage {
    string id = 1;
    oneof payload {
        Hello hello = 2;
        Started started = 3;
        ExperimentResults experimentResults = 4;
    }
}

message Hello {
}

message Start {
    repeated peerDescriptor.PeerDescriptor entryPoints = 1;
    bool asEntryPoint = 2;
    bool join = 3;
    optional string nodeId = 4;
}

message Started {
    peerDescriptor.PeerDescriptor peerDescriptor = 1;
    int32 timeToJoin = 2;
}

message JoinExperiment {
    repeated peerDescriptor.PeerDescriptor entryPoints = 1;
}

message ExperimentResults {
    string results = 1;
}